v0.0.7-alpha:
- Changed GraphicsComponent.render to an abstract method.
- Added more methods to Painter.

v0.0.6-alpha:
- Removed Player and Game from UI.
- Added resize and setCenter calls in Camera constructor.
- Switched the order of rendering in Tile.
- Fixed KeyboardKey.getKey not being public.
- Fixed bug in camera.

v0.0.5-alpha:
- Made Game, and subsequent subclasses, serializable.
- Added a method to Game for getting the elapsed and remaining time.
- Changed PlayerUIAction to KeyboardKey to support all keys being send to the UI.

v0.0.4-alpha:
- Fixed null pointer exception in handling of tile change events.
- Added an isDone field to Game.